fix hight on mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,14 @@ body {
     text-wrap: balance;
   }
 }
+
+.safe-area {
+  padding-top: env(safe-area-inset-top);
+  padding-right: env(safe-area-inset-right);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+}
+.h-fill-available {
+  height: -webkit-fill-available;
+  height: fill-available;
+}
